Made the project runnable using native modules